# lrcget-cli

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  ui-devplan.md  ui-revamp.md
.github/workflows/: docker-publish.yml
docker/: README.md  docker-compose.production.yml  docker-compose.yml
src/: error.rs  main.rs  signal_handler.rs
src/cli/: batch.rs  cache.rs  config.rs  download.rs  export.rs  fetch.rs  hooks.rs  init.rs  mod.rs  scan.rs  search.rs  templates.rs  watch.rs
src/cli/core/: download.rs  init.rs  mod.rs  scan.rs  search.rs
src/cli/management/: cache.rs  config.rs  export.rs  hooks.rs  mod.rs  templates.rs
src/cli/operations/: batch.rs  fetch.rs  mod.rs  watch.rs
src/config/: builder.rs  env.rs  mod.rs  validation.rs
src/core/: cache.rs  database.rs  hooks.rs  lrclib.rs  lrclib_db.rs  lyrics.rs  mod.rs  scanner.rs  templates.rs
src/core/data/: database.rs  lrclib_db.rs  mod.rs
src/core/files/: lyrics.rs  mod.rs
src/core/infrastructure/: cache.rs  hooks.rs  mod.rs  templates.rs
src/core/services/: lrclib.rs  mod.rs
src/services/: client_factory.rs  container.rs  database.rs  factory.rs  mod.rs  simple_container.rs
src/templates/: csv_export.hbs  library_summary.hbs  missing_lyrics.hbs  track_list.hbs
src/ui/: docker_ui.rs  enhanced_terminal_ui.rs  mod.rs  progress_state.rs  terminal_ui.rs
src/ui/terminal/: app.rs  app_with_focus.rs  colors.rs  events.rs  focus.rs  input.rs  integration.rs  integration_tests.rs  layout.rs  mod.rs  refresh.rs  renderer.rs  state.rs  state_buffer.rs  styles.rs  themes.rs
src/ui/terminal/panels/: footer.rs  header.rs  main.rs  mod.rs  queue.rs  sidebar.rs
src/ui/terminal/widgets/: block.rs  chart.rs  input.rs  mod.rs  progress.rs  sparkline.rs  table.rs  text.rs
src/utils/: logging.rs  mod.rs  progress.rs
