[package]
name = "lrcget-cli"
version = "0.1.0"
edition = "2021"
description = "Command-line utility for mass-downloading LRC synced lyrics"
authors = ["tranxuanthang"]
license = "MIT"
repository = "https://github.com/tranxuanthang/lrcget"

[[bin]]
name = "lrcget"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.4", features = ["derive", "color"] }

# UI and terminal
crossterm = { version = "0.27", features = ["event-stream"] }
ratatui = "0.25"
atty = "0.2"
sysinfo = "0.30"

# Async runtime
tokio = { version = "1.40", features = ["full", "sync", "signal"] }

# HTTP client (using rustls instead of OpenSSL)
reqwest = { version = "0.12.7", features = ["json", "rustls-tls"], default-features = false }

# Database
rusqlite = { version = "0.32.1", features = ["bundled"] }

# File system and audio metadata
globwalk = "0.9.1"
lofty = "0.21.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0.89"
thiserror = "1.0"

# Text processing
secular = { version = "1.0.1", features = ["bmp", "normalization"] }
collapse = "0.1.2"
regex = "1.10.4"
url = "2.5"

# LRC parsing
lrc = "0.1.8"

# Parallel processing
rayon = "1.10.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Progress bars
indicatif = "0.17"

# Crypto for challenge solving
ring = "0.17.8"
data-encoding = "2.4.0"

# Configuration
directories = "5.0"
dotenvy = "0.15"

# Async utilities
futures = "0.3"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Directory utilities
dirs = "5.0"

# Templates
handlebars = "5.1"

# Compression
flate2 = "1.0"

# Stream utilities
futures-util = "0.3"

# HTML parsing for scraping
scraper = "0.18"

# File system watching
notify = "6.1"
tokio-stream = "0.1"

# Redis cache
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
async-trait = "0.1"

# Fuzzy search
fuzzy-matcher = "0.3"

# Unicode width calculation for proper emoji handling in TUI
unicode-width = "0.1"